Fix spacing for hero and quote, header spacing broken

--- a/style.css
+++ b/style.css
@@ -20,8 +20,9 @@ body {
     align-items: center;
     justify-content: space-between;
     /* margin-bottom: 16px; */
-    width: 1000px;
+    max-width: 1000px;
     align-self: center;
+    min-width: 750px;
 
 }
 .header-logo {
@@ -50,12 +51,14 @@ a,
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 1000px;
+    max-width: 1000px;
+    min-width: 750px;
     margin-top: 48px;
     margin-bottom: 48px;
     padding: 0px 24px;
     gap: 16px;
     align-self: center;
+    flex: 1;
 }
 .hero-image {
     height: 200px;
@@ -142,7 +145,7 @@ a,
 .quote {
     display: flex;
     flex-direction: column;
-    width: 500px;
+    max-width: 700px;
     padding: 48px;
     align-self: center;
 /*    
@@ -151,7 +154,7 @@ a,
 */    
 }
 .quote p{
-    font-size: 24px;
+    font-size: 28px;
     align-self: flex-start;
     padding-bottom: 16px;
     color:rgb(53, 53, 53);
@@ -181,6 +184,7 @@ a,
     background-color:#3882F6;
     margin: 48px;
     border-radius: 8px;
+    min-width: 600px;
 }
 
 .cta-card button {
@@ -210,6 +214,9 @@ a,
     justify-content: center;
     align-items: center;
     background-color: rgb(50, 52, 61);
-    padding: 16px 0;
+    padding-top: 24px;
+    padding-bottom: 12px;
     margin: 0;
+
+    color:antiquewhite;
 }
